Fix FindBugs errors and remove dependencies on Apache libraries.